docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1099,6 +1099,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "marcgarreau",
+      "name": "Marc Garreau",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/3621728?v=4",
+      "profile": "https://www.manning.com/books/redux-in-action?a_aid=coach&a_bid=48d05fcb",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
