docs: update .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -922,7 +922,8 @@
       "avatar_url": "https://avatars3.githubusercontent.com/u/10674070?v=4",
       "profile": "https://github.com/EmanHerawy",
       "contributions": [
-        "translation"
+        "translation",
+        "code"
       ]
     },
     {
