docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1109,11 +1109,21 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "mul53",
+      "name": "mul53",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/19148531?v=4",
+      "profile": "https://github.com/mul53",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
   "projectName": "ethereum-org-website",
   "projectOwner": "ethereum",
   "repoType": "github",
-  "repoHost": "https://github.com"
+  "repoHost": "https://github.com",
+  "skipCi": true
 }
