--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1118,6 +1118,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "CodinMaster",
+      "name": "Apoorv Lathey",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/20395316?v=4",
+      "profile": "https://github.com/CodinMaster",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
