--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1127,6 +1127,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "ksato9700",
+      "name": "Ken Sato",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/175834?v=4",
+      "profile": "https://github.com/ksato9700",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
