--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1136,6 +1136,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "Sesamestrong",
+      "name": "Sesamestrong",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/26335275?v=4",
+      "profile": "https://github.com/Sesamestrong",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
