--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1118,6 +1118,33 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "CodinMaster",
+      "name": "Apoorv Lathey",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/20395316?v=4",
+      "profile": "https://github.com/CodinMaster",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "ksato9700",
+      "name": "Ken Sato",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/175834?v=4",
+      "profile": "https://github.com/ksato9700",
+      "contributions": [
+        "content"
+      ]
+    },
+    {
+      "login": "Sesamestrong",
+      "name": "Sesamestrong",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/26335275?v=4",
+      "profile": "https://github.com/Sesamestrong",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
