Add /use redirct [Resolves #642]

--- a/netlify.toml
+++ b/netlify.toml
@@ -57,6 +57,7 @@
 # For context-specific rules, use _headers or _redirects files, which are
 # PER-DEPLOY.
 
+# Legacy website pages
 [[redirects]]
   from = "/foundation"
   to = "/"
@@ -84,6 +85,11 @@
 [[redirects]]
   from = "/greeter"
   to = "/developers/"
+
+# Legacy pages from current site
+[[redirects]]
+  from = "/use"
+  to = "/dapps/"
 
 # A redirect rule with all the supported properties
 # [[redirects]]
