--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1145,6 +1145,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "Christofon",
+      "name": "ChrisK",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/26435661?v=4",
+      "profile": "https://github.com/Christofon",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
