docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1163,6 +1163,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "gjeanmart",
+      "name": "Grégoire Jeanmart",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/506784?v=4",
+      "profile": "https://greg.jeanmart.me",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
