--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1172,6 +1172,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "nysxah",
+      "name": "nysxah",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/30059030?v=4",
+      "profile": "https://github.com/nysxah",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
