--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1181,6 +1181,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "RachBLondon",
+      "name": "Rachel",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/8742251?v=4",
+      "profile": "http://rachblondon.github.io/",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
