--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1208,6 +1208,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "Pet3ris",
+      "name": "Peteris Erins",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/224585?v=4",
+      "profile": "http://peteris.xyz",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
