docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1217,6 +1217,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "JimmyShi22",
+      "name": "jimmyshi",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/12178678?v=4",
+      "profile": "https://github.com/JimmyShi22",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
