--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1226,6 +1226,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "JefteCosta",
+      "name": "Jefte Costa",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/3399117?v=4",
+      "profile": "http://www.netyul.com.br",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
