docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1235,6 +1235,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "jinhojang6",
+      "name": "Jinho Jang",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/41753422?v=4",
+      "profile": "https://www.linkedin.com/in/jinho-jang-4304a0142/",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
