docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1250,7 +1250,7 @@
       "name": "Julien Klepatch",
       "avatar_url": "https://avatars2.githubusercontent.com/u/9279488?v=4",
       "profile": "https://eattheblocks.com",
-            "contributions": [
+      "contributions": [
         "content"
       ]
     },
@@ -1259,6 +1259,15 @@
       "name": "Yaz Khoury",
       "avatar_url": "https://avatars2.githubusercontent.com/u/9094204?v=4",
       "profile": "https://www.yazkhoury.com",
+      "contributions": [
+        "content"
+      ]
+    },
+    {
+      "login": "yosriady",
+      "name": "Yos Riady",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/1084226?v=4",
+      "profile": "http://yos.io",
       "contributions": [
         "content"
       ]
