docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1280,6 +1280,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "wslyvh",
+      "name": "Wesley van Heije",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/25974464?v=4",
+      "profile": "https://twitter.com/wslyvh",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
