docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1233,7 +1233,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/3399117?v=4",
       "profile": "http://www.netyul.com.br",
       "contributions": [
-        "translation"
+        "translation",
+        "code"
       ]
     },
     {
