docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1290,6 +1290,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "gr0uch0dev",
+      "name": "gr0uch0dev",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/17497722?v=4",
+      "profile": "https://github.com/gr0uch0dev",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
