docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1299,6 +1299,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "hsy822",
+      "name": "sooyoung",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/17763340?v=4",
+      "profile": "https://github.com/hsy822",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
