--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1308,6 +1308,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "adria0",
+      "name": "Adria Massanet",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/5526331?v=4",
+      "profile": "https://github.com/adria0",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
