--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1317,6 +1317,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "as-dr",
+      "name": "Alex Singh",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/6787950?v=4",
+      "profile": "http://www.alexsingh.com",
+      "contributions": [
+        "design"
+      ]
     }
   ],
   "contributorsPerLine": 7,
