--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -66,7 +66,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/28689401?v=4",
       "profile": "http://impermanence.co",
       "contributions": [
-        "design"
+        "design",
+        "bug"
       ]
     },
     {
