docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1327,6 +1327,15 @@
       "contributions": [
         "design"
       ]
+    },
+    {
+      "login": "carlfairclough",
+      "name": "Carl Fairclough",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/4670881?v=4",
+      "profile": "http://carlfairclough.me",
+      "contributions": [
+        "design"
+      ]
     }
   ],
   "contributorsPerLine": 7,
