docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1336,6 +1336,15 @@
       "contributions": [
         "design"
       ]
+    },
+    {
+      "login": "kvrnc",
+      "name": "Kaven C",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/36660375?v=4",
+      "profile": "https://github.com/kvrnc",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
