--- a/netlify.toml
+++ b/netlify.toml
@@ -140,13 +140,14 @@
 #   to = "/index.html"
 #   status = 200
 
-# [[headers]]
+# https://docs.netlify.com/routing/headers/#syntax-for-the-netlify-configuration-file
+[[headers]]
   # Define which paths this specific [[headers]] block will cover.
-  # for = "/*"
+  for = "/*"
 
-  # [headers.values]
-  #   X-Frame-Options = "DENY"
-  #   X-XSS-Protection = "1; mode=block"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
   #   Content-Security-Policy = "frame-ancestors https://www.facebook.com"
 
     # Multi-value headers are expressed with multi-line strings.
