docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1334,7 +1334,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/4670881?v=4",
       "profile": "http://carlfairclough.me",
       "contributions": [
-        "design"
+        "design",
+        "code"
       ]
     },
     {
