--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "markdown-it-attrs": "^3.0.2",
     "moment": "^2.24.0",
     "netlify-lambda": "^1.6.3",
     "random-js": "^2.1.0",
