--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1355,6 +1355,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "evanstucker-hates-2fa",
+      "name": "Evans Tucker",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/20584445?v=4",
+      "profile": "https://github.com/evanstucker-hates-2fa",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
