--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1364,6 +1364,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "fluffays",
+      "name": "Adina Cretu",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/39056857?v=4",
+      "profile": "https://github.com/fluffays",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
