--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1373,6 +1373,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "tvanepps",
+      "name": "tvanepps",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/27454964?v=4",
+      "profile": "https://github.com/tvanepps",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
