docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1335,7 +1335,8 @@
       "profile": "http://carlfairclough.me",
       "contributions": [
         "design",
-        "code"
+        "code",
+        "bug"
       ]
     },
     {
