docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1401,6 +1401,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "ahmeteminkocal",
+      "name": "Ahmet Emin Koçal",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/10382507?v=4",
+      "profile": "https://www.emin.tech",
+      "contributions": [
+        "translation"
+      ]
     }
   ],
   "contributorsPerLine": 7,
