--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1410,6 +1410,15 @@
       "contributions": [
         "translation"
       ]
+    },
+    {
+      "login": "qnou",
+      "name": "Aqeel",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/33502282?v=4",
+      "profile": "http://empire.studio",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
