--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1419,6 +1419,16 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "linda-xie",
+      "name": "Linda Xie",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/55955358?v=4",
+      "profile": "https://github.com/linda-xie",
+      "contributions": [
+        "review",
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
