docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1429,6 +1429,16 @@
         "review",
         "content"
       ]
+    },
+    {
+      "login": "IanEck",
+      "name": "Ian Eck",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/5863338?v=4",
+      "profile": "https://github.com/IanEck",
+      "contributions": [
+        "review",
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
