--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "markdown-it-attrs": "^3.0.2",
+    "markdown-it-emoji": "^1.4.0",
     "moment": "^2.24.0",
     "netlify-lambda": "^1.6.3",
     "random-js": "^2.1.0",
+    "twemoji": "https://github.com/twitter/twemoji#gh-pages",
+    "twemoji-parser": "^12.1.3",
     "vuepress-plugin-sitemap": "^2.3.0"
   },
   "husky": {
