docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -301,7 +301,9 @@
       "avatar_url": "https://avatars3.githubusercontent.com/u/6292?v=4",
       "profile": "https://shazow.net/",
       "contributions": [
-        "content"
+        "content",
+        "ideas",
+        "a11y"
       ]
     },
     {
