docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1441,6 +1441,15 @@
         "review",
         "content"
       ]
+    },
+    {
+      "login": "cwaring",
+      "name": "Chris Waring",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/106938?v=4",
+      "profile": "http://wwaves.co",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
