docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1450,6 +1450,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "evertonfraga",
+      "name": "Ev",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/47108?v=4",
+      "profile": "https://github.com/evertonfraga",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
