docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -723,7 +723,8 @@
       "profile": "https://github.com/sorumfactory",
       "contributions": [
         "translation",
-        "projectManagement"
+        "projectManagement",
+        "content"
       ]
     },
     {
