docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1383,7 +1383,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/27454964?v=4",
       "profile": "https://github.com/tvanepps",
       "contributions": [
-        "bug"
+        "bug",
+        "content"
       ]
     },
     {
