--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1461,6 +1461,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "0xKiwi",
+      "name": "Ivan Martinez",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/6251510?v=4",
+      "profile": "https://discord.gg/5W5tVb3",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
