docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1479,6 +1479,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "anettrolikova",
+      "name": "Anett Rolikova ",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/44020788?v=4",
+      "profile": "https://twitter.com/AnettRolikova",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
