--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1488,6 +1488,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "poojaranjan",
+      "name": "Pooja Ranjan",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/29681685?v=4",
+      "profile": "https://etherworld.co",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
