--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1497,6 +1497,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "sassal",
+      "name": "sassal",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/9276959?v=4",
+      "profile": "https//twitter.com/sassal0x",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
