Add canonical HTML tags

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pretty-quick": "^2.0.0",
     "vue-jest": "^3.0.5",
     "vuepress": "^1.2.0",
+    "vuepress-plugin-canonical": "^1.0.0",
     "vuepress-plugin-ipfs": "^1.0.1"
   },
   "dependencies": {
