--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -321,7 +321,8 @@
       "avatar_url": "https://avatars0.githubusercontent.com/u/9390255?v=4",
       "profile": "http://www.twitter.com/timbeiko",
       "contributions": [
-        "content"
+        "content",
+        "review"
       ]
     },
     {
