docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1516,6 +1516,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "tasdienes",
+      "name": "Tas",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/18563486?v=4",
+      "profile": "https://github.com/tasdienes",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
