--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1525,6 +1525,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "s-pace",
+      "name": "Sylvain Pace",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/32097720?v=4",
+      "profile": "https://github.com/s-pace",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
