docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1523,7 +1523,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/18563486?v=4",
       "profile": "https://github.com/tasdienes",
       "contributions": [
-        "ideas"
+        "ideas",
+        "content"
       ]
     },
     {
