docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -568,7 +568,8 @@
       "avatar_url": "https://avatars1.githubusercontent.com/u/6937903?v=4",
       "profile": "https://github.com/ethers",
       "contributions": [
-        "content"
+        "content",
+        "ideas"
       ]
     },
     {
