docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -312,7 +312,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/429604?v=4",
       "profile": "https://twitter.com/smpalladino",
       "contributions": [
-        "content"
+        "content",
+        "ideas"
       ]
     },
     {
