--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1537,6 +1537,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "sinahab",
+      "name": "Sina Habibian",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/4315207?v=4",
+      "profile": "http://twitter.com/sinahab",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
