docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1546,6 +1546,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "crazyrabbitLTC",
+      "name": "Dennison Bertram",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/1938013?v=4",
+      "profile": "http://www.dennisonbertram.com",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
