--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1555,6 +1555,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "arturgontijo",
+      "name": "Artur Gontijo",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/15108323?v=4",
+      "profile": "https://github.com/arturgontijo",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
