docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -580,7 +580,8 @@
       "profile": "http://faraggi.org",
       "contributions": [
         "content",
-        "translation"
+        "translation",
+        "ideas"
       ]
     },
     {
