--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1565,6 +1565,16 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "ethjoe",
+      "name": "ethjoe",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/36374665?v=4",
+      "profile": "https://github.com/ethjoe",
+      "contributions": [
+        "content",
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7,
