--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1575,6 +1575,15 @@
         "content",
         "review"
       ]
+    },
+    {
+      "login": "cooganb",
+      "name": "cooganb",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/8144425?v=4",
+      "profile": "https://github.com/cooganb",
+      "contributions": [
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7,
