--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1584,6 +1584,15 @@
       "contributions": [
         "ideas"
       ]
+    },
+    {
+      "login": "drequinox",
+      "name": "drequinox",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/34604812?v=4",
+      "profile": "https://github.com/drequinox",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
