--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1593,6 +1593,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "tarun1475",
+      "name": "Tarun Gupta",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/17008737?v=4",
+      "profile": "https://biconomy.io",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
