docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1463,7 +1463,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/47108?v=4",
       "profile": "https://github.com/evertonfraga",
       "contributions": [
-        "ideas"
+        "ideas",
+        "bug"
       ]
     },
     {
