docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1454,7 +1454,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/106938?v=4",
       "profile": "http://wwaves.co",
       "contributions": [
-        "code"
+        "code",
+        "ideas"
       ]
     },
     {
