docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1214,7 +1214,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/34966228?v=4",
       "profile": "http://twitter.com/relativeread",
       "contributions": [
-        "content"
+        "content",
+        "ideas"
       ]
     },
     {
