--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1632,6 +1632,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "MorpheusNetwork",
+      "name": "Noam Eppel",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/36540973?v=4",
+      "profile": "https://morpheus.network/",
+      "contributions": [
+        "bug"
+      ]
     }
   ],
   "contributorsPerLine": 7,
