docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1641,6 +1641,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "jacobwillemsma",
+      "name": "Jacob Willemsma",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/4511854?v=4",
+      "profile": "https://github.com/jacobwillemsma",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
