docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1668,6 +1668,15 @@
       "contributions": [
         "content"
       ]
+    },
+    {
+      "login": "ph5500",
+      "name": "ph5500",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/60459707?v=4",
+      "profile": "https://github.com/ph5500",
+      "contributions": [
+        "content"
+      ]
     }
   ],
   "contributorsPerLine": 7,
