docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -581,7 +581,8 @@
       "contributions": [
         "content",
         "translation",
-        "ideas"
+        "ideas",
+        "review"
       ]
     },
     {
