--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1696,6 +1696,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "ryancreatescopy",
+      "name": "ryancreatescopy",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/40891631?v=4",
+      "profile": "https://github.com/ryancreatescopy",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7,
