docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1206,7 +1206,8 @@
       "avatar_url": "https://avatars3.githubusercontent.com/u/31592931?v=4",
       "profile": "https://github.com/wschwab",
       "contributions": [
-        "code"
+        "code",
+        "content"
       ]
     },
     {
