--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@mdx-js/react": "^1.6.5",
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.23.1",
+    "gatsby-image": "^2.4.7",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-react-helmet": "^3.3.4",
+    "gatsby-plugin-sharp": "^2.6.11",
     "gatsby-plugin-styled-components": "^3.3.3",
     "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-transformer-sharp": "^2.5.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
