docs: update .all-contributorsrc [skip ci]

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1704,7 +1704,8 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/40891631?v=4",
       "profile": "https://github.com/ryancreatescopy",
       "contributions": [
-        "doc"
+        "doc",
+        "code"
       ]
     },
     {
