--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@mdx-js/mdx": "^1.6.5",
     "@mdx-js/react": "^1.6.5",
+    "algoliasearch": "^4.3.0",
     "babel-plugin-styled-components": "^1.10.7",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.23.1",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-algolia": "^0.11.1",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-react-helmet": "^3.3.4",
@@ -24,6 +27,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-instantsearch-dom": "^6.6.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
