Support custom IDs in headings

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sharp": "^2.6.11",
     "gatsby-plugin-styled-components": "^3.3.3",
+    "gatsby-remark-autolink-headers": "^2.3.5",
     "gatsby-source-filesystem": "^2.3.10",
+    "gatsby-transformer-remark": "^2.8.16",
     "gatsby-transformer-sharp": "^2.5.5",
     "moment": "^2.26.0",
     "react": "^16.13.1",
