--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "babel-plugin-styled-components": "^1.10.7",
     "dotenv": "^8.2.0",
+    "framer-motion": "^1.11.1",
     "gatsby": "^2.23.1",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-algolia": "^0.11.1",
