Add Twemoji for components

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "netlify-lambda": "^1.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-emoji-render": "^1.2.4",
     "react-helmet": "^6.1.0",
     "react-instantsearch-dom": "^6.6.0",
     "styled-components": "^5.1.1"
