--- a/netlify.toml
+++ b/netlify.toml
@@ -59,41 +59,41 @@
 # Legacy website pages
 [[redirects]]
   from = "/pdfs/*"
-  to = "/"
+  to = "/en/"
 [[redirects]]
   from = "/brand"
-  to = "/assets/"
+  to = "/en/assets/"
 [[redirects]]
   from = "/ether"
-  to = "/use/"
+  to = "/en/dapps/"
 [[redirects]]
   from = "/token"
-  to = "/developers/"
+  to = "/en/developers/"
 [[redirects]]
   from = "/crowdsale"
-  to = "/developers/"
+  to = "/en/developers/"
 [[redirects]]
   from = "/dao"
-  to = "/developers/"
+  to = "/en/developers/"
 [[redirects]]
   from = "/cli"
-  to = "/developers/"
+  to = "/en/developers/"
 [[redirects]]
   from = "/greeter"
-  to = "/developers/"
+  to = "/en/developers/"
 [[redirects]]
   from = "/search"
-  to = "/"
+  to = "/en/"
 
 # Legacy pages from current site
 
 ## English
 [[redirects]]
   from = "/use"
-  to = "/dapps/"
+  to = "/en/dapps/"
 [[redirects]]
   from = "/beginners"
-  to = "/what-is-ethereum/"
+  to = "/en/what-is-ethereum/"
 
 ## All translations
 [[redirects]]
@@ -117,7 +117,64 @@
   from = "/sk/use"
   to = "/sk/dapps/"
 
-# TODO add /en redirects
+# English path redirects
+[[redirects]]
+  from = "/"
+  to = "/en/"
+[[redirects]]
+  from = "/what-is-ethereum/"
+  to = "/en/what-is-ethereum/"
+[[redirects]]
+  from = "/eth/"
+  to = "/en/eth/"
+[[redirects]]
+  from = "/dapps/"
+  to = "/en/dapps/"
+[[redirects]]
+  from = "/wallets/"
+  to = "/en/wallets/"
+[[redirects]]
+  from = "/learn/"
+  to = "/en/learn/"
+[[redirects]]
+  from = "/community/"
+  to = "/en/community/"
+[[redirects]]
+  from = "/build/"
+  to = "/en/build/"
+[[redirects]]
+  from = "/developers/"
+  to = "/en/developers/"
+[[redirects]]
+  from = "/enterprise/"
+  to = "/en/enterprise/"
+[[redirects]]
+  from = "/whitepaper/"
+  to = "/en/whitepaper/"
+[[redirects]]
+  from = "/foundation/"
+  to = "/en/foundation/"
+[[redirects]]
+  from = "/eips/"
+  to = "/en/eips/"
+[[redirects]]
+  from = "/about/"
+  to = "/en/about/"
+[[redirects]]
+  from = "/privacy-policy/"
+  to = "/en/privacy-policy/"
+[[redirects]]
+  from = "/terms-of-use/"
+  to = "/en/terms-of-use/"
+[[redirects]]
+  from = "/cookie-policy/"
+  to = "/en/cookie-policy/"
+[[redirects]]
+  from = "/languages/"
+  to = "/en/languages/"
+[[redirects]]
+  from = "/enterprise/"
+  to = "/en/enterprise/"
 
 # A redirect rule with all the supported properties
 # [[redirects]]
