--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-algolia": "^0.11.1",
     "gatsby-plugin-intl": "^0.3.3",
+    "gatsby-plugin-manifest": "^2.4.13",
     "gatsby-plugin-mdx": "^1.2.15",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sharp": "^2.6.11",
