--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^2.23.1",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-algolia": "^0.11.1",
+    "gatsby-plugin-catch-links": "^2.3.7",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.4.13",
     "gatsby-plugin-mdx": "^1.2.15",
