--- a/.github/workflows/docsearchConfig.json
+++ b/.github/workflows/docsearchConfig.json
@@ -1,13 +1,52 @@
 {
   "index_name": "dev-ethereum-org",
-  "start_urls": ["https://deploy-preview-1134--ethereumorg.netlify.app/en/"],
+  "start_urls": [
+    {
+      "url": "https://deploy-preview-1134--ethereumorg.netlify.app/(?P<lang>.*?)/",
+      "variables": {
+        "lang": [
+          "en",
+          "ar",
+          "bn",
+          "cs",
+          "de",
+          "el",
+          "es",
+          "fa",
+          "fr",
+          "id",
+          "ig",
+          "it",
+          "ja",
+          "ko",
+          "ml",
+          "nl",
+          "no",
+          "pl",
+          "pt-br",
+          "ru",
+          "sk",
+          "sl",
+          "ro",
+          "se",
+          "tr",
+          "zh",
+          "zh-tw"
+        ]
+      }
+    }
+  ],
   "stop_urls": [],
   "selectors": {
-    "lvl0": "main h1",
-    "lvl1": "main h2",
-    "lvl2": "main h3",
-    "lvl3": "main h4",
-    "lvl4": "main h5",
+    "lvl0": {
+      "selector": "title",
+      "global": true
+    },
+    "lvl1": "main h1",
+    "lvl2": "main h2",
+    "lvl3": "main h3",
+    "lvl4": "main h4",
+    "lvl5": "main h5",
     "text": "main p, article li",
     "lang": {
       "selector": "/html/@lang",
